--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,6 +26,10 @@
 @import './utils/modal-contact-info';
 @import './utils/modal-skills';
 @import './utils/modal-photo';
-@import './utils/modal-talent'
+@import './utils/modal-talent';
+@import './utils/modal-about';
+@import './utils/modal-experience';
+@import './utils/modal-get-started';
+@import './utils/modal-team-builder'
 
 
