--- a/src/partials/analytics.html
+++ b/src/partials/analytics.html
@@ -29,7 +29,7 @@
                         </ul>
                 </div>
 
-                <div class="slider">
+                <div class="slider first-slider">
                     <div class="slider__container">
                         <div class="slider__wrapper">
                             <div class="slider__items">
