--- a/src/partials/modal-experience.html
+++ b/src/partials/modal-experience.html
@@ -1,7 +1,7 @@
 <div class="modal" data-modal="8">
 <div></div>
 <h3></h3>
- 
+ <div></div>
 </div>
 <!-- Подложка под модальным окном -->
 <div class="overlay js-overlay-modal"></div>
